package Protos;

message InputTimeSeriesC {
    required double dt = 1;
}

message InputTimeSeriesState {
    required uint32 index = 1;
}

